--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.2",
     "@shadcn/ui": "^0.0.4",
+    "@supabase/supabase-js": "^2.90.1",
     "@tanstack/react-query": "^5.90.17",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
@@ -22,6 +23,7 @@
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.454.0",
     "next": "latest",
+    "next-auth": "^5.0.0-beta.30",
     "react": "latest",
     "react-dom": "latest",
     "react-dropzone": "^14.2.3",
